# persistent-mem

./: .editorconfig  .gitignore  CMakeLists.txt  NOTES.md  README.md  persistent_mem.c  persistent_mem.kdev4
.github/workflows/: test.yml
.kdev4/: persistent_mem.kdev4
example/: README.md  main.cpp
include/: persistent_mem.h  persistent_ptr.hpp  persistent_space.hpp
test/: smoke_tests.cpp
